force-app/main/default/objects/Product_Fields__c/Product_Fields__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Contains the fields and their Ids for Product Object to be pre populated on product create.</description>
    <label>Product Object Descriptions</label>
</CustomObject>