force-app/main/default/objects/Product_Fields__c/fields/Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_Id__c</fullName>
    <description>Contains the field Id of Account Id field on Product Object.</description>
    <inlineHelpText>Contains the field Id of Account Id field on Product Object.</inlineHelpText>
    <label>Account Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>