force-app/main/default/objects/Product_Fields__c/fields/Grand_Parent_Product_Id__c.field-meta.xml
<CustomField>
    <fullName>Grand_Parent_Product_Id__c</fullName>
    <description>Contains the Grand Parent Product field Id in current org..</description>
    <inlineHelpText>Contains the Grand Parent Product field Id in current org.</inlineHelpText>
    <label>Grand Parent Product Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>