force-app/main/default/objects/Product_Fields__c/fields/Opportunity_Id__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Id__c</fullName>
    <description>Contains the Opportunity Field Id of Product Object.</description>
    <inlineHelpText>Contains the Opportunity Field Id of Product Object.</inlineHelpText>
    <label>Opportunity Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>