force-app/main/default/objects/Product_Fields__c/fields/Parent_Product_Id__c.field-meta.xml
<CustomField>
    <fullName>Parent_Product_Id__c</fullName>
    <description>Contains the Parent Product field Id.</description>
    <inlineHelpText>Contains the Parent Product field Id of current Org.</inlineHelpText>
    <label>Parent Product Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>