force-app/main/default/objects/Product_Fields__c/fields/Product_Division_Id__c.field-meta.xml
<CustomField>
    <fullName>Product_Division_Id__c</fullName>
    <description>Contains the Product Division field Id.</description>
    <inlineHelpText>Contains the Product Division field Id of current Org.</inlineHelpText>
    <label>Product Division Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>