force-app/main/default/objects/Product_Fields__c/fields/Product_Id__c.field-meta.xml
<CustomField>
    <fullName>Product_Id__c</fullName>
    <description>Contains the Product field Id of current Org.</description>
    <inlineHelpText>Contains the Product field Id of current Org.</inlineHelpText>
    <label>Product Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>